Removed inapplicable data from result
Regenerated Swagger document
